--- a/index.html
+++ b/index.html
@@ -9,33 +9,57 @@
 </head>
 <body>
     <div id="main">
-        <div id="home">
-            <div id="cursor"></div>
+        <div class="about">
+            <div class="about_heading">
+                <h2 class='hehehe'>WHO THE FUCK I AM</h2>
+            </div>
+        </div>
+        <div class="hero">
             <nav>
-                <p><a href="#">Dhruv Verma</a></p>
-                <p class="animated-border">MENU+</p>
+                <div class="leftnav"><h2><span>TECH</span>      <span>STACK</span></h2></div>
+                <div class="rightnav">
+                    <img class="rightnav_img" src="svg/html5-logo-svgrepo-com.svg">
+                    <img class="rightnav_img" src="svg/css-svgrepo-com.svg">
+                    <img class="rightnav_img" src="svg/js01-svgrepo-com.svg">
+                    <img class="rightnav_img" src="svg/tailwind-svgrepo-com.svg">
+                    <img class="rightnav_img" src="svg/react-svgrepo-com.svg">
+                    <img class="rightnav_img" src="svg/next-js-svgrepo-com.svg">
+                </div>
             </nav>
             <div id="firstName">
                 <h1>FRONTENED</h1>
             </div>
             <div id="lastName">
                 <h1>DEVELOPER</h1>
-                <h5>BASED IN KANPUR</h5>
+                <h5>LIVING IN KANPUR</h5>
             </div>
             <div id="availability">
                 <h4>AVAILABLE FOR JOB & FREELANCE</h4>
                 <h4>WORK REMOTE & ON-SITE</h4>
             </div>
             <div id="home_footer">
-                <p class="animated-border"><a href="#">CURRENTLY STUDYING AT MASAI <i class="ri-arrow-right-up-line"></i></a></p>
+                <p class="animated-border"><a href="#">Dhruv Verma <i class="ri-arrow-right-up-line"></i></a></p>
                 <p class="animated-border"><a href="#">hustlingchan@gmail.com <i class="ri-arrow-right-up-line"></i></a></p>
-                <p><span id="arrow_down"><i class="ri-arrow-down-line"></i></span><span id="arrow_down"><i class="ri-arrow-down-line"></i></span></p>
+                <div class="social_media">
+                    <img class="home_footer_img"  src="svg/insta-svgrepo-com.svg" alt="">
+                    <img class="home_footer_img"  src="svg/github-rounded-svgrepo-com.svg" alt="">
+                    <img class="home_footer_img"  src="svg/linkedin-round-svgrepo-com.svg" alt="">
+                    <img class="home_footer_img"  src="svg/youtube-168-svgrepo-com.svg" alt="">
+                </div>
             </div>
-            
+        </div>
+        <div class="animated_heading"><h2>PROJECTS THAT I MADE</h2><h2>PROJECTS THAT I MADE</h2></div>
+        <div class="projects">
+            <div class="elements">
+                <div class="elem"><h2 class="text">EnchantCart</h2></div>
+                <div class="elem"><h2 class="text">ChatMingle</h2></div>
+                <div class="elem"><h2 class="text">StreamBeam</h2></div>
+            </div>
         </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js" integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
 </body>
 </html>
