--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <div id="main">
         <div class="about">
             <div class="about_heading">
-                <h2 class='hehehe'>WHO THE FUCK I AM</h2>
+                <h2 class='hehehe'>I M FIT FOR YOUR JOB</h2>
             </div>
         </div>
         <div class="hero">
             <nav>
                 <div class="leftnav"><h2><span>TECH</span>      <span>STACK</span></h2></div>
                 <div class="rightnav">
-                    <img class="rightnav_img" src="svg/html5-logo-svgrepo-com.svg">
-                    <img class="rightnav_img" src="svg/css-svgrepo-com.svg">
+                    <img class="rightnav_img" src="svg/express-svgrepo-com.svg">
+                    <img class="rightnav_img" src="svg/mongodb-svgrepo-com.svg">
                     <img class="rightnav_img" src="svg/js01-svgrepo-com.svg">
                     <img class="rightnav_img" src="svg/tailwind-svgrepo-com.svg">
                     <img class="rightnav_img" src="svg/react-svgrepo-com.svg">
@@ -27,7 +27,7 @@
                 </div>
             </nav>
             <div id="firstName">
-                <h1>FRONTENED</h1>
+                <h1>FULLSTACK</h1>
             </div>
             <div id="lastName">
                 <h1>DEVELOPER</h1>
@@ -51,8 +51,8 @@
         <div class="animated_heading"><h2>PROJECTS THAT I MADE</h2><h2>PROJECTS THAT I MADE</h2></div>
         <div class="projects">
             <div class="elements">
-                <div class="elem"><h2 class="text">EnchantCart</h2></div>
-                <div class="elem"><h2 class="text">ChatMingle</h2></div>
+                <a href="https://react-vite-comfy-store-v2.netlify.app" target="_blank"><div class="elem"><h2 class="text">Comfy Store</h2></div></a>
+                <a href="https://redux-toolkit-jobster.netlify.app" target="_blank"><div class="elem"><h2 class="text">Jobster</h2></div></a>
                 <div class="elem"><h2 class="text">StreamBeam</h2></div>
             </div>
         </div>
